--- a/css/style.css
+++ b/css/style.css
@@ -385,6 +385,10 @@ ul {
     border-radius: 4px;
 }
 
+.client-card:hover {
+    border: 1px solid var(--accent-color);
+}
+
 .client-link {
     height: 92px;
     display: flex;
@@ -395,7 +399,6 @@ ul {
 
 .client-link:hover {
     color: var(--accent-color);
-    border: 1px solid var(--accent-color);
 }
 
 .client-logo {
