--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ ul {
 }
 
 .navbar-element:hover,
+.navbar-element:focus,
 .navbar-element:active {
     color: var(--accent-color);
 }
@@ -139,6 +140,7 @@ ul {
 }
 
 .email:hover,
+.email:focus,
 .email:active {
     color: var(--accent-color);
 }
@@ -161,6 +163,7 @@ ul {
 }
 
 .tel:hover,
+.tel:focus,
 .tel:active {
     color: var(--accent-color);
 }
@@ -217,6 +220,7 @@ ul {
 }
 
 .hero-btn:hover,
+.hero-btn:focus,
 .hero-btn:active {
     background-color: var(--active-color);
 }
@@ -322,7 +326,7 @@ ul {
 
 .team-member-info {
     text-align: center;
-    padding: 30px 0 16px 0;
+    padding: 30px 0;
 }
 
 .member-name {
@@ -338,6 +342,7 @@ ul {
     line-height: 1.19;
     letter-spacing: 0.03em;
     color: var(--secondary-color);
+    margin-bottom: 16px;
 }
 
 .member-socials-wrapper {
@@ -345,7 +350,6 @@ ul {
     justify-content: center;
     align-items: center;
     gap: 10px;
-    margin-bottom: 30px;
 }
 
 .socials-link {
@@ -357,7 +361,9 @@ ul {
     border-radius: 50%;
 }
 
-.socials-link:hover {
+.socials-link:hover,
+.socials-link:focus,
+.socials-link:active {
     background-color: var(--accent-color);
     color: white;
 }
@@ -385,7 +391,9 @@ ul {
     border-radius: 4px;
 }
 
-.client-card:hover {
+.client-card:hover,
+.client-card:focus,
+.client-card:active {
     border: 1px solid var(--accent-color);
 }
 
@@ -397,7 +405,9 @@ ul {
     color: var(--icons-color);
 }
 
-.client-link:hover {
+.client-link:hover,
+.client-link:focus,
+.client-card:active {
     color: var(--accent-color);
 }
 
@@ -489,7 +499,9 @@ ul {
     border-radius: 50%;
 }
 
-.footer-socials-link:hover {
+.footer-socials-link:hover,
+.footer-socials-link:focus,
+.footer-socials-link:active {
     background-color: var(--accent-color);
 }
 
@@ -524,6 +536,7 @@ ul {
 }
 
 .filter-btn:hover,
+.filter-btn:focus,
 .filter-btn:active {
     background-color: var(--accent-color);
     color: white;
@@ -541,7 +554,9 @@ ul {
     flex-basis: calc((100% - 60px) / 3);
 }
 
-.portfolio-card:hover {
+.portfolio-card:hover,
+.portfolio-card:focus,
+.portfolio-card:active {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
